grammar.js
    source_file: $ => repeat($._top_level_statement),

    _top_level_statement: $ => choice(
      $._statement,
      $.hotstring,
      $.remap,
      $.hotkey,
    ),

    line_comment: $ => prec(PREC.COMMENT, choice(token(';'), token(/;[^@\r\n][^\r\n]*/))),

    directive_comment: $ => prec(PREC.COMMENT, seq(
      token(';@'),
      field('directive', alias(/[^\r\n\s]*/i, $.directive_identifier)),
      optional(field('arguments', alias(/[^\r\n]*/, $.directive_arguments))),
      $._eol,
    )),

    //# region General Expressions

    _single_expression: $ => choice(
      $._pairwise_operation,
      $._literal,
      $.identifier,
      $.dynamic_identifier,
      $._primary_expression,
      $.verbal_not_operation,
      $.dereference_operation,
      $.varref_operation,
      // The maybe operator (?) is a postfix marker on an operand. It is permitted
      // in expression position generally so that optional chains (x?.y) and
      // alpha.29 short-circuiting (f()? as an operand of any operator) compose
      // naturally. Where it is actually legal is contextual; we are permissive.
      $.optional_expression,
    ),

    assignment_operation: $ => prec.left(PREC.ASSIGNMENT, seq(
      field('left', $._single_expression),
      field('operator', $.assignment_operator),
      field('right', $._single_expression),
    )),

    member_access: $ => prec(PREC.MEMBER_ACCESS, seq(
      field('object', $._single_expression),
      '.',
      field('member', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
        $.dereference_operation,
        alias($._member_dynamic_identifier, $.dynamic_identifier),
      )),
    )),

    // A combination of identifiers and derefs, such as `a%b%`
    // Derefs can follow other derefs, like obj.%a%%b%
    // All parts must be contiguous (no whitespace) — `a %b%` is implicit concatenation, not a dynamic identifier
    // Adapted from: https://github.com/Descolada/keysharp/blob/master/Keysharp.Core/Scripting/Parser/Antlr/MainParser.g4#L480
    _member_dynamic_identifier: $ => prec.dynamic(1, prec.right(PREC.MEMBER_ACCESS, choice(
      seq(
        // Unlike variable names, property names may also *start* with a digit (`obj.2a%k%`)
        choice($.identifier, alias($._numeric_property_name, $.identifier)),
        $.dereference_operation,
        repeat(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation)),
      ),
      seq(
        $.dereference_operation,
        repeat1(choice(
          $.identifier,
          alias($._numeric_property_name, $.identifier),
          $.dereference_operation,
        )),
      ),
    ))),

    // The "maybe" operator: a postfix `?` permitting its operand to be unset.
    // Syntactically it just wraps the immediately-preceding operand; the
    // short-circuit semantics are a runtime concern and are not modelled here.
    // The operand is restricted to the things that can legally precede `?`:
    // a variable, a property/member access, an index access, or a call.
    assignment_operator: $ =>
      choice( ':=', '+=', '-=', '*=', '/=', '//=', '.=', '|=', '&=', '^=', '>>=', '<<=', '>>>=', '??='),

    function_call: $ => prec(PREC.OVERRIDE, seq(
      field('function', $._single_expression),
      token.immediate('('),
      field('arguments', optional($.arg_sequence)),
      ')',
    )),

    // MsgBox "Hello", "Example", "IconI OK"
    // Can only be used as a statement (not in expressions)
    _arg: $ => choice(
      $._single_expression,
      $.empty_arg,
    ),

    arg_sequence: $ => prec.right(choice(
      // Args without expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        /**
         * A trailing comma is allowed but ignored - you can test this
         *    Function(params*) => MsgBox(params.length)
         *    Function(1,) ; "1"
         */
        optional(','),
      ),
      // Only the *last* argument may be expanded, hence the separate alternatives rather
      // than admitting array_expansion_operation as an ordinary `_arg`. They share the
      // `_arg (',' _arg)*` prefix with the branch above so that LALR can defer the decision
      // to the marker itself.
      // Single arg with expansion
      $.array_expansion_operation,
      // Multiple args with last one having expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        ',',
        $.array_expansion_operation,
      ),
    )),

    // Postfix `*`, which expands an iterable into the enclosing argument list or array
    // literal. array_expansion_marker is produced by the external scanner, which
    // disambiguates it from the multiplication operator by looking ahead for ')' or ']'.
    function_declaration: $ => seq(
      $._function_def_marker,
      optional(field('scope', $.scope_identifier)),
      field('name', $.identifier),
      field('head', $.function_head),
      field('body', $.function_body),
    ),

    function_body: $ => choice(
      $.block,
      seq('=>', $._single_expression),
    ),

    function_head: $ => seq(
      '(',
      optional(choice($.wildcard, $.param_sequence)),
      ')',
    ),

    // "formal parameter list"
    _initializer: $ => seq(
      field('operator', alias(':=', $.assignment_operator)),
      field('value', $._single_expression)),

    integer_literal: $ => token(/([0-9]+)/),

    hex_literal: $ => token(/0[xX][0-9a-fA-F]+/),


    string_literal: $ => choice(
      token(/"([^"`\r\n]|`[^\r\n\t])*"/),
      token(/'([^'`\r\n]|`[^\r\n\t])*'/),
    ),

    // The elements are an arg_sequence rather than an expression_sequence: an array literal
    // takes exactly what an argument list takes, including elided elements (`[1,,3]`) and a
    // trailing array expansion (`[a, rest*]`), neither of which is an expression.
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // AHK allows property and method names, but not variable names, to begin with a digit
    // https://www.autohotkey.com/docs/alpha/Concepts.htm#names
    _numeric_property_name: $ => token(/[0-9][a-zA-Z0-9_]*/),

    // Note: not strictly "modifiers" because declaring one can switch a function into assume-local/global mode
    scope_identifier: $ => token(
      prec(PREC.KEYWORD, choice(
        /static/i,
        /local/i,
        /global/i,
      ))),

    //# region Continuation Sections

    _block_body: $ => seq($._statement, optional($._block_body)),

    block: $ => seq(
      '{', optional($._block_body), '}',
    ),

    class_declaration: $ => seq(
      $._class_decl_marker,
      $.class,
      field('name', $.identifier),
      optional(seq(
        $.extends,
        field('superclass', choice($.identifier, $.member_access)),
      )),
      field('body', $.class_body),
    ),

    class_body: $ => seq('{', _class_body_members($), '}'),

    property_declaration: $ => seq(
      optional(field('scope', $.scope_identifier)),
      choice(
        // Accessor forms, which declare exactly one property.
        seq(
          field('name', $._property_name),
          // Unlike function_head, the brackets may not be empty ("Empty [] not permitted"),
          // but they may hold a lone anonymous variadic marker (`__Item[*]`).
          field('head', optional(seq('[', choice($.wildcard, $.param_sequence), ']'))),
          field('body', choice(
            // getter-only shorthand: prop => 42
            seq('=>', alias($._single_expression, $.getter)),
            $.property_declaration_block,
          )),
        ),
        // Initializer-list form. One declarator per name, so that `static a := 1, b := 2`
        // yields a name/value pair per property rather than repeating both fields on the
        // declaration itself.
        seq(
          alias($._first_property_declarator, $.property_declarator),
          repeat(seq(',', $.property_declarator)),
        ),
      ),
    ),

    // Only the *first* declarator is required to be initialized, and only it can have a
    // scope keyword
    _first_property_declarator: $ => seq(
      field('name', choice($._property_name, alias($.scope_identifier, $.identifier))),
      field('initializer', $._initializer),
    ),

    property_declarator: $ => seq(
      field('name', $._property_name),
      field('initializer', optional($._initializer)),
    ),

    _property_name: $ => choice(
      $.identifier,
      alias($._numeric_property_name, $.identifier), // property names may begin with a digit
      alias($._qualified_property_name, $.member_access),
    ),

    // A dotted chain of literal identifiers (`x.y`, `Prototype.sharedValue`,
    // `a.b.c`) used as a property-declaration target or a `catch` class name. Must be
    // literal identifiers, so far narrower scope than a typical member_acess
    getter: $ => seq($.get, field('body', $.function_body)),
    class: $ => kwtok(/class/i),
    hotkey: $ => prec.right(PREC.OVERRIDE, seq(
      field('trigger', $.hotkey_trigger),
      $._hotkey_double_colon,
      field('body', optional(choice(
        seq($._single_expression, $._eol),
        seq(alias($.top_level_expression_sequence, $.expression_sequence), $._eol),
        // `#a::global w += 1, h += 2` - a declaration list is a legal same-line body
        seq($.variable_declaration, $._eol),
        $.function_declaration,
        $.block,
        $._hotkey_alttabcommand,
        $.call_statement,
      ))),
    )),

    // Remaps are effectively preprocessor directives, so they beat everything in precedence. Even
    // if you have a function shadowing a remapped key, the remap wins.
    // See: https://www.autohotkey.com/docs/v2/misc/Remap.htm
    hotkey_trigger: $ => prec.right(PREC.KEYWORD, seq(
      seq(
        repeat($._hotkey_meta_modifier),
        $._hotkey_trigger_identifier,
        optional($.hotkey_up),
      ),
      optional(repeat(seq(
        $.hotkey_and,
        $.hotkey_trigger,
      ))),
    )),

    // Remap trigger: like hotkey_trigger but modifier chars (^, !, #, +, <, >)
    // can also be literal keys. e.g., ^::a remaps caret key to a.
    // No combinator (& ) or up modifier since remaps are single keys.
    _hotkey_meta_modifier: $ => choice(
      $.hotkey_nonblocking,
      $.hotkey_usehook,
    ),

    // "regular" modifiers like ctrl, win, etc.
    _hotkey_trigger_identifier: $ => prec.right(choice(
      // modifier(s) only - must be at least one
      repeat1($._hotkey_modifier),
      seq(
        // optional modifier(s) + key
        repeat($._hotkey_modifier),
        choice(
          alias(token('{'), $.key_identifier),        // force conflict resolution w/blocks
          alias(token(/\S/), $.key_identifier),       // single non-word chars (}, ), etc.)
          alias($.integer_literal, $.key_identifier), // digit keys (0-9)
          alias($.identifier, $.key_identifier),       // word-like keys (letters, named keys)
        ),
      ),
    )),

    hotkey_ctrl: $ => token('^'),
    _hotkey_alttabcommand: $ => choice(
      $.hotkey_alttab,
      $.hotkey_shiftalttab,
      $.hotkey_alttabmenu,
      $.hotkey_alttabandmenu,
      $.hotkey_alttabmenudismiss,
    ),
