test/corpus/comments.txt
================================================================================
Basic line comment
================================================================================

; line comment

--------------------------------------------------------------------------------

(source_file
  (line_comment))

================================================================================
Basic directive comment
================================================================================

;@region Example

--------------------------------------------------------------------------------

(source_file
  (directive_comment
    (directive_identifier)
    (directive_arguments)))

================================================================================
Directive comment without arguments
================================================================================

;@Ahk2Exe-IgnoreBegin

--------------------------------------------------------------------------------

(source_file
  (directive_comment
    (directive_identifier)))

================================================================================
Line comment after statement
================================================================================

a := 1 ; line comment

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (integer_literal))
  (line_comment))

================================================================================
String literal with escaped semicolon
================================================================================

str := "string `; not a comment"

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (string_literal)))

================================================================================
Several line comments in a row
================================================================================

; line comment 1
; line comment 2
; line comment 3

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (line_comment))

================================================================================
Several directive comments in a row
================================================================================

;@Ahk2Exe-SetCompanyName Example
;@Ahk2Exe-SetCopyright © 2026 Me
;@Ahk2Exe-SetDescription My cool script

--------------------------------------------------------------------------------

(source_file
  (directive_comment
    (directive_identifier)
    (directive_arguments))
  (directive_comment
    (directive_identifier)
    (directive_arguments))
  (directive_comment
    (directive_identifier)
    (directive_arguments)))

================================================================================
Directive comment following statement code
================================================================================

; Unsure if this should be allowed tbh
DoSomething() ;@Ahk2Exe-IgnoreBegin

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (function_call
    (identifier))
  (directive_comment
    (directive_identifier)))

================================================================================
Basic block comment
================================================================================

/*
 * A block comment
 */

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
Single-line block comment
================================================================================

/* A block comment */

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
String with block comment
================================================================================

str := "/* not a block comment */"

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (string_literal)))

================================================================================
Line comments in code block
================================================================================

MyFirstScript() {
    ; TODO make this cooler
    MsgBox("Hello, World!")
}
--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (function_head)
    (function_body
      (block
        (line_comment)
        (function_call
          (identifier)
          (arg_sequence
            (string_literal)))))))

================================================================================
Block comment with line comment in it
================================================================================

/**
 * ; Still a block comment
 */

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
Line comment in an expression sequence
================================================================================

vals := Map(
    "one", 1,   ; The number 1
    "two", 2    ; The number 2
)

--------------------------------------------------------------------------------

(source_file
  (assignment_operation
    (identifier)
    (assignment_operator)
    (function_call
      (identifier)
      (arg_sequence
        (string_literal)
        (integer_literal)
        (line_comment)
        (string_literal)
        (integer_literal))
      (line_comment))))

================================================================================
Line comment in a method call
================================================================================

obj.Function(
    0xFF,       ; Everything
    "Some super important argument"
)

--------------------------------------------------------------------------------

(source_file
  (function_call
    (member_access
      (identifier)
      (identifier))
    (arg_sequence
      (hex_literal)
      (line_comment)
      (string_literal))))

================================================================================
Nested block comments
================================================================================

/*
 * Close must be at start of line or EOL so this isn't an error
 * (/* nested */)
*/

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
Block comment between class members
================================================================================

; Regression for the trailing-indentation fix in block comment scanning

class Foo {
    static Bar => "baz"

    /**
     * A property
     */
    Qux := 0
}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (class_declaration
    (class)
    (identifier)
    (class_body
      (property_declaration
        (scope_identifier)
        (identifier)
        (getter
          (string_literal)))
      (block_comment)
      (property_declaration
        (property_declarator
          (identifier)
          (assignment_operator)
          (integer_literal))))))

================================================================================
Unclosed block comment
================================================================================

/*
 * Block comments can end at EOF

--------------------------------------------------------------------------------

(source_file
  (block_comment))

================================================================================
Block comment inline with code
:error
================================================================================

Foo("bar", /* illegal */ "bar")  

--------------------------------------------------------------------------------



================================================================================
Block comment closed as first token of line
================================================================================

/*
*/ MsgBox()

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (function_call
    (identifier)))

================================================================================
Block comment between a function-call hotkey body and a function declaration
================================================================================

; Regression: the function-def-marker lookahead must not park the lexer on the
; block comment's '/', which previously folded the MsgBox() body into the comment.

^o:: MsgBox()

/**
 * Block comment
 */
FunctionDecl() {

}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (hotkey
    (hotkey_trigger
      (hotkey_ctrl)
      (key_identifier))
    (function_call
      (identifier)))
  (block_comment)
  (function_declaration
    (identifier)
    (function_head)
    (function_body
      (block))))

================================================================================
Empty line comment
================================================================================

;

--------------------------------------------------------------------------------

(source_file
  (line_comment))
